--- a/chatbot-project/src/App.css
+++ b/chatbot-project/src/App.css
@@ -1,42 +1,75 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+      .send-button {
+        background-color: rgb(25, 135 ,84);
+        color: white;
+        padding: 12px 20px;
+        margin-left: 10px;
+        border: none;
+        border-radius: 10px;
+        font-size: 15px;
+        cursor: pointer;
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+      }
+      .chat-input {
+        padding: 10px;
+        font-size: 16px;
+        width: 300px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
 
-.card {
-  padding: 2em;
-}
+        flex-grow: 1;
+      }
+      .chat-input-container {
+        display: flex;
+        align-items: center;
+        margin-bottom: 60px;
+      }
 
-.read-the-docs {
-  color: #888;
-}
+      .app-container {
+        max-width: 600px;
+        margin-left:  auto;
+        margin-right: auto;
+
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        
+      }
+
+      .chat-message-user {
+        display:flex;
+        justify-content: end;
+        align-items: center;
+        
+      }
+      .chat-message-robot {
+        display:flex;
+        justify-content: start;
+         align-items: center;
+      }
+      
+    
+      .chat-message-text {
+        background-color: #f1f1f1;
+        padding: 10px;
+        border-radius: 10px;
+        max-width: 300px;
+        margin: 5px;
+        
+      }
+
+      .chat-message-profile {
+        width: 45px;
+        height: 45px;
+        object-fit: contain;
+        flex-shrink: 0;
+        margin: 0 8px;}
+
+      .chat-messages-container {
+        flex-grow: 1;
+        margin-top: 20px;
+        overflow: scroll;
+        scrollbar-width: none;
+
+      }
