--- a/chatbot-project/src/components/ChatMessage.css
+++ b/chatbot-project/src/components/ChatMessage.css
@@ -25,4 +25,7 @@
         height: 45px;
         object-fit: contain;
         flex-shrink: 0;
-        margin: 0 8px;}
+        margin: 0 8px;
+      border-radius: 45px;
+      object-fit: cover;
+      }
